# wafers

./: .gitignore  Cargo.toml  README.md  index.html  index.js  memo.md  package-lock.json  package.json  webpack.config.js
assets/: index.js
bench/: bevacqua_fuzzysearch.html
bench/js/: bevacqua.js  fuse.js  fusejs.js
crate/: Cargo.toml
crate/pkg/: muff.d.ts  muff.js  muff_bg.d.ts  muff_bg.wasm  package.json
crate/src/: lib.rs
crate/src/js_utils/: mod.rs
crate/src/search/: cache.rs  fuzzy_match.rs  highlight.rs  mod.rs  sort.rs  word_scoring_struct.rs
crate/src/signal/: mod.rs
js/: init.js
pkg/: muff.js  muff_bg.wasm  muff_wasm.d.ts  muff_wasm.js  muff_wasm_bg.d.ts  muff_wasm_bg.wasm  package-lock.json  package.json  wazf.d.ts  wazf.js  wazf_bg.wasm
sample/: index.html
sample/bench/: fusejs.html
sample/bench/js/: bevacqua.js  list.js
sample/simple/: package.json  webpack.config.js
sample/simple/www/: 0.js  1.js  index.html  sample.js
sample/webWorker/: package.json  webpack.config.js
sample/webWorker/www/: 0.worker.js  1.worker.js  2.worker.js  index.html  sample.js
src/: .lib.rs.swp  js_string_utils.rs  lib.rs  search.rs  utils.rs
src/js_utils/: mod.rs
src/search/: .byte_index_struct.rs.swp  .fuzzy_match.rs.swp  .mod.rs.swp  byte_index_struct.rs  fuzzy_match.rs  mod.rs  sort.rs  word_scoring.rs  word_scoring_struct.rs
www/: README.md  bootstrap.js  comlink.js  index.html  index.js  muff-sample.js  muffSample.js  muffin-sample.js  package-lock.json  package.json  wazf.js  webpack.config.js  worker.js
www/sample/words/: list.js
(+14 files in other folders)
